<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".activityfartos.MenuPrincipal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/fartos"
        android:textAppearance="@style/styleText"
        android:textColor="@android:color/white"
        android:textSize="40sp"
        android:textStyle="bold|italic" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/selecciona_el_n_mero_de_jugadores"
        android:textAppearance="@style/styleText"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:columnCount="2">

        <Button
            android:id="@+id/button_3_jugadors"
            android:layout_width="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#B25531"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/_3_jugadors"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_4_jugadors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#B25531"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/_4_jugadors"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_5_jugadors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#B25531"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/_5_jugadors"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/button_6_jugadors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:backgroundTint="#B25531"
            android:elevation="4dp"
            android:padding="16dp"
            android:text="@string/_6_jugadors"
            android:textSize="24sp"
            android:textStyle="bold" />

    </GridLayout>

</LinearLayout>