<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    tools:context=".activityfartos.SelectCharacter">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jugador_1"
        android:textAlignment="center"
        android:textAppearance="@style/styleText"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/sprite_sasuke" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jugador_2"
        android:textAlignment="center"
        android:textAppearance="@style/styleText"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/sprite_naruto_kyubi" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/jugador_3"
        android:inputType="text"
        android:textAlignment="center"
        android:textAppearance="@style/styleText"
        android:textSize="30sp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="110dp"
        android:src="@drawable/sprite_kakashi" />

    <Button
        android:id="@+id/btnPlay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/jugar"
        android:textSize="25sp" />
</LinearLayout>